--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,9 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    // library to make HTTP requests
+    compile 'com.android.volley:volley:1.0.0'
+    // library to load images from links and display it in the App
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     testCompile 'junit:junit:4.12'
 }
