--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PopUpInfo"
+            android:theme="@style/AppTheme.CustomTheme"
+            ></activity>
 
         <receiver android:name=".PhoneStateReceiver">
             <intent-filter>
@@ -35,5 +38,5 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
 </manifest>
